added sketch and library

--- a/.p5rc
+++ b/.p5rc
@@ -10,6 +10,7 @@
     "6-tiles-2",
     "7-tiles-3",
     "8-tiles-4",
-    "9-times-table-circle"
+    "9-times-table-circle",
+    "10-the-force-1"
   ]
 }
