particles sketch added. minor optimizations

--- a/.p5rc
+++ b/.p5rc
@@ -11,6 +11,7 @@
     "7-tiles-3",
     "8-tiles-4",
     "9-times-table-circle",
-    "10-the-force-1"
+    "10-the-force-1",
+    "11-particles-up"
   ]
 }
