added 12 sketch (tiles)

--- a/.p5rc
+++ b/.p5rc
@@ -12,6 +12,7 @@
     "8-tiles-4",
     "9-times-table-circle",
     "10-the-force-1",
-    "11-particles-up"
+    "11-particles-up",
+    "12-tiles-5"
   ]
 }
