--- a/.p5rc
+++ b/.p5rc
@@ -13,6 +13,8 @@
     "9-times-table-circle",
     "10-the-force-1",
     "11-particles-up",
-    "12-tiles-5"
+    "12-tiles-5",
+    "13-tiles-6",
+    "14-tiles-7"
   ]
 }
