added tile editor sketch

--- a/.p5rc
+++ b/.p5rc
@@ -20,6 +20,7 @@
     "16-tiles-9",
     "17-tiles-10",
     "18-tiles-11",
-    "19-tiles-12"
+    "19-tiles-12",
+    "20-tile-interact-1"
   ]
 }
