rotations sketch added

--- a/.p5rc
+++ b/.p5rc
@@ -21,6 +21,7 @@
     "17-tiles-10",
     "18-tiles-11",
     "19-tiles-12",
-    "20-tile-interact-1"
+    "20-tile-interact-1",
+    "21-rotations"
   ]
 }
