added rotation sketch

--- a/.p5rc
+++ b/.p5rc
@@ -22,6 +22,7 @@
     "18-tiles-11",
     "19-tiles-12",
     "20-tile-interact-1",
-    "21-rotations"
+    "21-rotations",
+    "22-rotations"
   ]
 }
