added rotation sketch

--- a/.p5rc
+++ b/.p5rc
@@ -23,6 +23,7 @@
     "19-tiles-12",
     "20-tile-interact-1",
     "21-rotations",
-    "22-rotations"
+    "22-rotations",
+    "23-rotations"
   ]
 }
