added rotation sketch

--- a/.p5rc
+++ b/.p5rc
@@ -24,6 +24,7 @@
     "20-tile-interact-1",
     "21-rotations",
     "22-rotations",
-    "23-rotations"
+    "23-rotations",
+    "24-rotations"
   ]
 }
